--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent"
     android:background="@color/primary_color"
     android:orientation="vertical"
-    tools:context="com.example.android.miwok.MainActivity">
+    tools:context="com.jerrychong.miwok.miwok.example.android.miwok.MainActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
